--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "typescript": "^4.1.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.9",
         "@types/googlemaps": "^3.43.3",
         "@types/jasmine": "^3.6.3",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/pg": "^7.14.7",
         "jasmine": "^3.6.4",
         "jasmine-spec-reporter": "^6.0.0",
