--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node src/server.ts",
         "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-        "test": "jasmine-ts",
+        "test": "tsc && jasmine-ts",
         "tsc": "tsc"
     },
     "compilerOptions": {
@@ -23,6 +23,8 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "pg": "^8.5.1",
+        "supertest": "^6.2.3",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^4.1.3"
     },
     "devDependencies": {
@@ -32,10 +34,11 @@
         "@types/jasmine": "^3.6.3",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/pg": "^7.14.7",
+        "@types/supertest": "^2.0.12",
         "jasmine": "^3.6.4",
         "jasmine-spec-reporter": "^6.0.0",
-        "jasmine-ts": "^0.3.0",
-        "ts-node": "^9.1.1",
+        "jasmine-ts": "^0.3.3",
+        "ts-node": "^10.8.1",
         "tsc-watch": "^4.2.9"
     }
 }
