--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node src/server.ts",
         "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-        "test": "tsc && jasmine-ts",
+        "test": "jasmine-ts",
         "tsc": "tsc"
     },
     "compilerOptions": {
