--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - .env
     volumes:
       - 'postgres:/var/lib/postgresql/data'
+      - ./create_second_db.sh:/docker-entrypoint-initdb.d/create_second_db.sh
 
 volumes:
   postgres:
