--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "compilerOptions": {
         "skipLibCheck": true
     },
+    "author": "Udacity",
+    "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
